<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:id="@+id/send_fragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_fragment_title"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Spinner
        android:layout_width="100dp"

        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_marginTop="30dp"

        android:layout_below="@+id/textView"
        android:layout_toStartOf="@+id/button" />

    <Spinner
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:layout_alignTop="@+id/spinner"
        android:layout_toEndOf="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/destination"
        android:id="@+id/textView3"
        android:layout_above="@+id/spinner2"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/source"
        android:id="@+id/textView2"
        android:layout_above="@+id/spinner2"
        android:layout_alignLeft="@+id/spinner"
        android:layout_alignStart="@+id/spinner"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="65dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_button"
        android:id="@+id/button"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="58dp" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/datePicker"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true"
        android:calendarViewShown="true" />


</RelativeLayout>
